--- a/src/components/Article/index.css
+++ b/src/components/Article/index.css
@@ -1,5 +1,8 @@
 .themeSwitcher {
   padding: 20px;
+  position: fixed;
+  top: 0;
+  right: 0;
 }
 
 .article {
@@ -20,4 +23,3 @@
   background-color: pink;
   color: magenta;
 }
-
